# EA-Syntetic-ECG-Creator

./: .gitignore  LICENSE  README.md  generate_realistic_ecg.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  publish-hf.yml
configs/: hf_publish.example.yaml
docs/: HUGGINGFACE.md  LOCALIZATION.md
examples/: README.md  arrhythmia_index.json
scripts/: generate_arrhythmia_examples.py
synthecg/: __init__.py  __main__.py  cli.py  config.py  pipeline.py
synthecg/augment/: __init__.py  geometric.py  paper.py
synthecg/benchmark/: __init__.py  __main__.py  digitize.py  localize.py
synthecg/data/: __init__.py  fetch.py  preprocess.py  ptbxl.py  zheng_otva.py
synthecg/export/: __init__.py  ground_truth.py  huggingface.py  manifest.py  masks.py  publish.py  yolo.py
synthecg/hf/: __init__.py  __main__.py
synthecg/localization/: __init__.py  features.py  inference.py  literature.py  pvc_otva.py  taxonomy.py  types.py  wpw.py
synthecg/localize/: __init__.py  __main__.py
synthecg/recipes/: __init__.py  builder.py  definitions.py
synthecg/render/: __init__.py  grid.py  opencv_renderer.py  overlay.py  plot.py  types.py
synthecg/render/layouts/: __init__.py  common.py  layout_12x1.py  layout_3x4.py
tests/: test_core.py  test_hf.py  test_localization.py
tests/fixtures/zheng/: diagnosis.csv
tests/fixtures/zheng/ecg_denoised/: 707139.csv  762912.csv
